# weaver

./: .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  README.md  cspell.json  justfile
.claude/commands/: handoff.md
.claude/skills/note-writer/: SKILL.md
.claude/skills/weaver-context/: SKILL.md
crates/weaver-cli/: Cargo.toml
crates/weaver-cli/src/: main.rs
crates/weaver-core/: Cargo.toml
crates/weaver-core/src/: error.rs  lib.rs  observability.rs  queue.rs  runtime.rs  worker.rs
crates/weaver-core/src/app/: builder.rs  gc_loop.rs  mod.rs  publisher_loop.rs  reaper_loop.rs  runtime.rs  status.rs  worker_loop.rs
crates/weaver-core/src/domain/: attempt.rs  budget.rs  decision.rs  (+11 more)
dev/docs/adr/: 0000-architecture-decision-template.md  0001-task-id-only-queue-design.md  0002-state-transitions-in-taskrecord.md  0003-notify-outside-lock.md  0004-tokio-select-for-multiple-events.md  0005-decider-architecture.md
dev/docs/architecture/: README.md
dev/docs/explorations/: 2026_01_01_algebraic_effects.md
dev/docs/requirements/: 2025_12_26_weaver_requirements.md  2025_12_27_weaver_requirements.md  2026_01_03_weaver_requirements.md
dev/docs/tips/: lock_minimization_pattern.md
dev/learning/: 2025_12_28.md  2025_12_29.md  2025_12_30.md  2026_01_02.md  README.md  learning_2025_12_28.md  learning_2026_01_03.md  learning_2026_01_04.md  learning_2026_01_06.md  learning_2026_01_07.md  learning_2026_01_11.md  tasks.md
dev/learning/tasks_v1/: learning_2025_12_29.md  learning_2026_01_01.md  learning_2026_01_02.md  tasks.md
dev/thinking/: thinking_2025_01_03.md
(+24 files in other folders)
