[package]
name = "weaver-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time"] }
weaver-core = { path = "../weaver-core" }
